err/oejskit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/oejskit'...
Compiling './lib/python3.5/site-packages/oejskit/browser.py'...
***   File "./lib/python3.5/site-packages/oejskit/browser.py", line 225
    print start_cmd
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/oejskit/js'...
Listing './lib/python3.5/site-packages/oejskit/testing_rt'...
Listing './lib/python3.5/site-packages/oejskit/weblib'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/MochiKit'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/doc'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/doc/html'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/doc/html/MochiKit'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/doc/js'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/doc/rst'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/doc/rst/MochiKit'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/ajax_tables'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/color_wheel'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/dnd_sortable'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/draggable'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/effects'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/interpreter'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/key_events'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/logging_pane'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/mochiregexp'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/mouse_events'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/rounded_corners'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/simple_dnd'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/sortable_tables'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/view-source'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/view-source/lib'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/examples/view-source/lib/SyntaxHighlighter'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/include'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/include/_img'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/include/css'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/packed'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/packed/MochiKit'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/scripts'...
Compiling './lib/python3.5/site-packages/oejskit/weblib/mochikit/scripts/build.py'...
***   File "./lib/python3.5/site-packages/oejskit/weblib/mochikit/scripts/build.py", line 123
    zi.external_attr = 0660 << 16L
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/oejskit/weblib/mochikit/scripts/make_docs.py'...
***   File "./lib/python3.5/site-packages/oejskit/weblib/mochikit/scripts/make_docs.py", line 89
    print srcfn, "not changed"
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/tests'...
Listing './lib/python3.5/site-packages/oejskit/weblib/mochikit/tests/SimpleTest'...
Listing './lib/python3.5/site-packages/oejskit-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
